--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ generateGrammarSource {
 dependencies {
     antlr "org.antlr:antlr4:4.7"
     compile group: 'info.picocli', name: 'picocli', version: '2.0.1'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'edu.washington.cs.types.checker', name: 'checker-framework', version: '1.7.5'
+    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
